--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@ CodeCoverage/
 *.VisualState.xml
 TestResult.xml
 nunit-*.xml
+/.vs/CMS.Api.slnx/FileContentIndex
+/.vs/CMS.Api/CopilotIndices/18.3.180.61135
