--- a/CMS.Application/CMS.Application.csproj
+++ b/CMS.Application/CMS.Application.csproj
@@ -7,7 +7,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Features\Users\Commands\DeleteUser\DeleteUserCommand.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="12.1.0" />
+    <PackageReference Include="MediatR" Version="13.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.0" />
+    <PackageReference Include="Riok.Mapperly" Version="4.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CMS.Domain\CMS.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Features\Users\Commands\DeleteUser\DeleteUserCommand.cs" />
   </ItemGroup>
 
 </Project>
