Add API controllers, middleware, and service extensions
Introduces AuthController and UsersController for authentication and user management endpoints. Adds middleware for exception handling, request logging, and security headers. Implements service registration and middleware pipeline extensions for API, including versioning, OpenAPI, CORS, rate limiting, and health checks. Updates Program.cs to use new service and middleware setup. Refactors exception handling for standardized API error responses. Updates configuration files for JWT, CORS, and rate limiting. Adds missing FluentValidation and EF Core dependencies.

--- a/CMS.Api/appsettings.Development.json
+++ b/CMS.Api/appsettings.Development.json
@@ -1,8 +1,24 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "Microsoft.AspNetCore": "Information",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=cms_db;Username=cms_user;Password=cms_password"
+  },
+  "Jwt": {
+    "Key": "DevelopmentSecretKeyThatIsAtLeast32CharactersLong!DoNotUseInProduction!",
+    "Issuer": "CMS.Api.Development",
+    "Audience": "CMS.Client.Development",
+    "AccessTokenExpirationMinutes": 60,
+    "RefreshTokenExpirationDays": 30
+  },
+  "RateLimiting": {
+    "EnableRateLimiting": true,
+    "PermitLimit": 1000,
+    "Window": 60
   }
 }
