--- a/CMS.Api/appsettings.json
+++ b/CMS.Api/appsettings.json
@@ -2,8 +2,31 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=cms_db;Username=cms_user;Password=cms_password"
+  },
+  "Jwt": {
+    "Key": "YourSuperSecretKeyThatIsAtLeast32CharactersLong!ChangeThisInProduction!",
+    "Issuer": "CMS.Api",
+    "Audience": "CMS.Client",
+    "AccessTokenExpirationMinutes": 15,
+    "RefreshTokenExpirationDays": 7
+  },
+  "Cors": {
+    "AllowedOrigins": [
+      "http://localhost:4200",
+      "http://localhost:4201",
+      "http://localhost:4202"
+    ]
+  },
+  "RateLimiting": {
+    "EnableRateLimiting": true,
+    "PermitLimit": 100,
+    "Window": 60
+  }
 }
