--- a/CMS.Application/CMS.Application.csproj
+++ b/CMS.Application/CMS.Application.csproj
@@ -12,8 +12,10 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="12.1.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.0" />
     <PackageReference Include="MediatR" Version="13.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.0" />
     <PackageReference Include="Riok.Mapperly" Version="4.3.0" />
   </ItemGroup>
 
