--- a/CMS.Api/CMS.Api.csproj
+++ b/CMS.Api/CMS.Api.csproj
@@ -1,10 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net10.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
@@ -18,11 +18,5 @@
 		<ProjectReference Include="..\CMS.Infrastructure\CMS.Infrastructure.csproj" />
 		<ProjectReference Include="..\CMS.Shared\CMS.Shared.csproj" />
 	</ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\CMS.Application\CMS.Application.csproj" />
-    <ProjectReference Include="..\CMS.Infrastructure\CMS.Infrastructure.csproj" />
-    <ProjectReference Include="..\CMS.Shared\CMS.Shared.csproj" />
-  </ItemGroup>
 
 </Project>
