Update Swashbuckle version and security requirement setup
Upgraded Swashbuckle.AspNetCore to version 10.0.1 and updated the Swagger security requirement configuration to use the new Swashbuckle API. Also updated the default database connection string in appsettings.json.

--- a/CMS.Api/appsettings.json
+++ b/CMS.Api/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=cms_db;Username=cms_user;Password=cms_password"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=backend_cms;Username=postgres;Password=23041988"
   },
   "Jwt": {
     "Key": "YourSuperSecretKeyThatIsAtLeast32CharactersLong!ChangeThisInProduction!",
