Ensure database exists before applying migrations
Added logic to ApplicationDbContextInitializer to check and create the PostgreSQL database if it does not exist before running migrations. Updated dependency injection to specify migrations assembly explicitly. Updated connection string in development settings for new database and credentials.

--- a/CMS.Api/appsettings.Development.json
+++ b/CMS.Api/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=cms_db;Username=cms_user;Password=cms_password"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=backend_cms;Username=postgres;Password=23041988"
   },
   "Jwt": {
     "Key": "DevelopmentSecretKeyThatIsAtLeast32CharactersLong!DoNotUseInProduction!",
