--- a/CMS.Infrastructure/CMS.Infrastructure.csproj
+++ b/CMS.Infrastructure/CMS.Infrastructure.csproj
@@ -25,6 +25,7 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.0" />
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0" />
 		<PackageReference Include="Riok.Mapperly" Version="4.3.0" />
+		<PackageReference Include="SixLabors.ImageSharp" Version="3.1.12" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.15.0" />
 	</ItemGroup>
 
